# shopify-functions-workshop

./: package.json  shopify.app.toml
extensions/product-discount/: Cargo.toml  input.graphql  shopify.app.functions-workshop.toml  shopify.extension.toml
extensions/product-discount/src/: main.rs
