[package]
name = "product-discount"
version = "1.0.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0"
shopify_function = "0.3.0"
graphql_client = "0.13.0"
serde_with = "1.10"
wasi = "0.10.2"


[profile.release]
lto = true
opt-level = 'z'
strip = true
